# EntraShift

./: .gitignore  README.md  branding-guidelines.md
docs/: app-registrations.md  deployment.md  security.md
docs/scripts/: New-EntraShiftAppRegistrations.ps1  New-MasterKey.ps1  New-MasterKey.sh
engine/: README.md  pyproject.toml
engine/entrashift_engine/: __init__.py  __main__.py  checkpoint.py  config.py  contracts.py  control_plane.py  job_context.py  logging_setup.py  queue_consumer.py  secrets.py  worker.py
engine/entrashift_engine/exchange/: __init__.py  exporter.py  importer.py  migrator.py
engine/entrashift_engine/graph/: __init__.py  client.py  errors.py  throttle.py
engine/entrashift_engine/onedrive/: __init__.py  migrator.py
engine/tests/: test_checkpoint.py  test_contracts.py  test_throttle.py
shared/: api-spec.md  contracts.ts
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  AppShell.tsx  main.tsx  vite-env.d.ts
web/src/components/: Badge.tsx  Banner.tsx  Button.tsx  Card.tsx  DataGrid.tsx  EmptyState.tsx  Icon.tsx  Input.tsx  Logo.tsx  Modal.tsx  PageHeader.tsx  ProgressBar.tsx  Sparkline.tsx  StatusCard.tsx  Toast.tsx  WorkloadPill.tsx  components.css  index.ts
web/src/lib/: api.ts  appInfo.ts  format.ts  session.tsx  theme.ts  useAsync.ts
web/src/screens/: AuditLog.tsx  Dashboard.tsx  MappingProvisioning.tsx  MigrationMonitor.tsx  MigrationReports.tsx  Settings.tsx  SignIn.tsx  TenantConnections.tsx  UserDiscovery.tsx
web/src/styles/: app.css  global.css  tokens.css
worker/: .dev.var  README.md  cookies.txt  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
worker/migrations/: 0001_init.sql
worker/src/: env.ts  index.ts
worker/src/auth/: access.ts  devbypass.ts  oidc.ts  session.ts
worker/src/db/: audit.ts  budget.ts  config.ts  credentials.ts  jobItems.ts  jobs.ts  migrationUsers.ts  sessions.ts  tenants.ts
worker/src/graph/: client.ts
worker/src/lib/: audit.ts  budget.ts  crypto.ts  csv.ts  errors.ts  ids.ts  jwt.ts  time.ts
worker/src/middleware/: budget.ts  ratelimit.ts  session.ts  vm.ts
worker/src/routes/: audit.ts  auth.ts  budget.ts  config.ts  discovery.ts  index.ts  jobs.ts  mapping.ts  passwords.ts  provision.ts  users.ts  (+3 more)
worker/test/: crypto.test.ts  csv.test.ts
